--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "rc": "~0.5.0",
     "sails": "~0.11.2",
     "sails-disk": "~0.10.0",
-    "sails-mysql": "^0.11.2"
+    "sails-mysql": "^0.11.2",
+    "uuid": "^2.0.1"
   },
   "scripts": {
     "debug": "node debug app.js",
